--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,5 +1,6 @@
 [theme]
-
-# backgroundColor="050505"
-
-# textColor="f8f8f8"
+primaryColor="#49d4b7"
+backgroundColor="#050505"
+secondaryBackgroundColor="#F0F2F6"
+textColor="#f8f8f8"
+font="sans serif"
