--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,6 +1,6 @@
 [theme]
 primaryColor="#49d4b7"
 backgroundColor="#050505"
-secondaryBackgroundColor="#F0F2F6"
+secondaryBackgroundColor="#49d4b7"
 textColor="#f8f8f8"
 font="sans serif"
