--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -3,4 +3,4 @@ primaryColor="#49d4b7"
 backgroundColor="#050505"
 secondaryBackgroundColor="#49d4b7"
 textColor="#f8f8f8"
-font="serif"
+font="sans serif"
