--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,6 +1,6 @@
 [theme]
 primaryColor="#49d4b7"
 backgroundColor="#050505"
-secondaryBackgroundColor="#49d4b7"
-textColor="#f8f8f8"
+secondaryBackgroundColor="#363636"
+textColor="#49d4b7"
 font="sans serif"
